idea-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idea-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: idea-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: idea-app
    spec:
      containers:
        - image: dneversky/idea:0.0.0
          name: idea
          ports:
            - containerPort: 8080
        - image: mysql:latest
          name: mysql
          ports:
          - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: idea-service
spec:
  type: ClusterIP
  selector:
    app: idea-app
  ports:
  - port: 80
    targetPort: 8080

          # readinessProbe:
          #   failureThreshold: 3
          #   httpGet:
          #     path: /
          #     port: 8080
          #   periodSeconds: 10
          #   successThreshold: 1
          #   timeoutSeconds: 1
          # livenessProbe:
          #   failureThreshold: 3
          #   httpGet:
          #     path: /
          #     port: 8080
          #   periodSeconds: 10
          #   successThreshold: 1
          #   timeoutSeconds: 1
          #   initialDelaySeconds: 10
          # resources:
          #   requests:
          #     cpu: 50m
          #     memory: 100Mi
          #   limits:
          #     cpu: 100m
          #     memory: 100Mi
          # resources:
          #   requests:
          #     cpu: 50m
          #     memory: 50Mi
          #   limits:
          #     cpu: 50m
          #     memory: 50Mi
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idea-ingress
spec:
  rules:
  - host: idea-app
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: idea-service
            port:
              number: 8080
